# hyperserve

./: .gitignore  .golangci.yml  .mcp  API_STABILITY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  Makefile  PERFORMANCE.md  PROJECT_STRUCTURE.md  README.md  README_NEW.md  RELEASE_NOTES.md  benchmark_test.go  cors.go  github_api.yaml  go.mod  go.sum  handlers.go  handlers_test.go  htmx-spec.json  hyperserve.go  hyperserve_test.go  integration_test.go  interceptor_test.go  jsonrpc.go  jsonrpc_facade.go  jsonrpc_test.go  mcp.go  mcp_auto_discovery.go  mcp_builtin.go  mcp_concurrency_test.go  mcp_defaults_test.go  mcp_developer_tools.go  mcp_developer_tools_test.go  mcp_devops_resources.go  mcp_discovery.go  (+39 more)
.claude/: settings.local.json
benchmarks/: README.md  RESULTS.md  analyze_results.py  final_benchmark.sh  (+7 more)
rust/: Cargo.toml
rust/examples/: basic.rs  echo.rs  fast.rs  mcp.rs  middleware.rs  performance_tuning.rs  websocket.rs
rust/examples/demucs-api/: README.md  analyze_audio.py  analyze_audio_simple.py  generate_test_wav.py  main.rs  simple_api.rs  simple_json_api.rs  test_api.sh  test_client.py  test_simple.rs
rust/src/: builder.rs  lib.rs
rust/src/http/: concurrent_queue.rs  fast_buffer.rs  fast_parser.rs  fast_response.rs  mod.rs  optimized_pool.rs  parser.rs  response.rs  router.rs  server_config.rs  thread_pool.rs  thread_pool_v2.rs
rust/src/json/: builder.rs  mod.rs
rust/src/mcp/: jsonrpc.rs  mod.rs  mod_old.rs  resources.rs  sse.rs  tools.rs
rust/src/middleware/: mod.rs
rust/src/websocket/: mod.rs
(+261 files in other folders)
